Text wrap fix

--- a/src/styles/components/_comment.scss
+++ b/src/styles/components/_comment.scss
@@ -19,3 +19,8 @@
 .Comment__deleteButton {
   margin-top: 1em;
 }
+
+.Comment__content {
+  width: 80vw;
+  word-wrap: break-word;
+}
