--- a/src/styles/components/_innerComment.scss
+++ b/src/styles/components/_innerComment.scss
@@ -5,10 +5,8 @@
   width: 80vw;
 }
 
-// .CommentBox__textInput--inner {
-//   opacity: 0;
-// }
-
 .InnerCommentBox {
   opacity: 0;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
